# studykit

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_workflow.py
src/studykit/: __init__.py  __main__.py  cli.py  store.py
src/studykit/core/: __init__.py  deadlines.py  files.py  grades.py  notes.py
tests/: conftest.py  test_cli_courses.py  test_cli_deadlines.py  test_cli_files.py  test_cli_grades.py  test_cli_notes.py  test_core_deadlines.py  test_core_files.py  test_core_grades.py  test_core_notes.py  test_store.py
