[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "studykit"
version = "0.1.0"
description = "Student productivity and file management CLI"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=12.0",
]

[project.scripts]
studykit = "studykit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/studykit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
